clusters/k3s-server/jupyter/jupyterlab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyterlab
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyterlab
  template:
    metadata:
      labels:
        app: jupyterlab
    spec:
      securityContext:
        fsGroup: 100 # Allows the 'jovyan' user to write to the PVC
      containers:
      - name: jupyter
        # Use Quay.io to avoid Docker Hub Rate Limits!
        image: quay.io/jupyter/scipy-notebook:2026-04-13
        command: [ "start-notebook.sh" ]
        args: [ "--ip=0.0.0.0" ]
        ports:
        - containerPort: 8888
        volumeMounts:
        - name: notebook-data
          mountPath: /home/jovyan/work
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "4Gi" # Cap it so it doesn't crash the server
            cpu: "2000m"
      volumes:
      - name: notebook-data
        persistentVolumeClaim:
          claimName: jupyter-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-service
  namespace: default
spec:
  selector:
    app: jupyterlab
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: jupyter.govindappa.com
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - jupyter.govindappa.com
    secretName: jupyter-tls
  rules:
  - host: jupyter.govindappa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyter-service
            port:
              number: 80
